--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "trailingComma": "all"
   },
   "dependencies": {
+    "@types/three": "^0.182.0",
     "motion": "^12.23.26",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "three": "^0.182.0",
+    "three-stdlib": "^2.36.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
